--- a/specific-content/index/01c-week-workflow.qmd
+++ b/specific-content/index/01c-week-workflow.qmd
@@ -17,7 +17,7 @@
       <li> <b>Thursday 10:30 - 11:30 am </b> | Rasul holds office hours </li>
 
       <li> <b>Friday 2:30 - 3:30 pm </b> | Rasul holds office hours </li>
-
+      <li> <b>Friday 3:30 - 5:30 pm </b> | Collaboration hours with your peers </li>
     		
     	</ul>
     </div>
