--- a/specific-content/schedule/04-week05.qmd
+++ b/specific-content/schedule/04-week05.qmd
@@ -39,6 +39,14 @@
     <td></td>
   </tr>
   
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td>Sample Midterm Answers&nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://canvas.eee.uci.edu/courses/76404/files?preview=32952332" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a></td>
+    <td></td>
+  </tr>
   
   <tr>
     <td><input type="checkbox" /></td>
