change proposal due date

--- a/specific-content/schedule/04-week06.qmd
+++ b/specific-content/schedule/04-week06.qmd
@@ -64,7 +64,7 @@
     <td> Project proposal&nbsp; &nbsp; </td>
     <td>Instructions in Week 4 repos</td>
     <td></td>
-    <td>Nov 5th at 5:00 pm</td>
+    <td><s>Nov 5th at 5:00 pm</s> Nov 7th at 5:00 pm</td>
   </tr>
     
         
