--- a/specific-content/schedule/04-week07.qmd
+++ b/specific-content/schedule/04-week07.qmd
@@ -1,3 +1,69 @@
 {{< fa calendar >}} Nov 10 - 16
 
-TBD
+<table class="table-striped text-left table-bordered" align = "center">
+
+  <thead>
+    <th style="width:  3%"></th>
+    <th style="width:  30%"></th>
+    <th style="width:  40%">Notes</th>
+    <th style="width:  8%">Links</th>
+    <th style="width:  15%">Due</th>
+  </thead>
+  
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> 	Introduction to Bayesian Inference: Credible Intervals and Hyptohesis Testing      &nbsp; &nbsp; </td>
+    <td> </td>
+    <td><a href="https://stats6-fa25.github.io/slides/week07/7a-bb-ci-ht.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a> </td>
+    <td></td>
+  </tr>
+  
+
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Reading </td>
+    <td>Section 8.2	</td>
+    <td><a href="https://www.bayesrulesbook.com/chapter-8" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to the Book" target = "_blank"></i></a></td>
+    <td></td>
+  </tr>
+  
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td>Introduction to Frequentist Inference &nbsp; &nbsp; </td>
+    <td></td>
+    <td><a href="https://stats6-fa25.github.io/slides/week07/7b-freq-inference.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a>
+      </td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td><input type="checkbox" /></td>
+    <td> Reading  </td>
+    <td>Section 5.1</td>
+    <td><a href="https://www.openintro.org/go/?id=os4_for_screen_readers&referrer=/book/os/index.php" target ="_blank"> <i class="fas fa-book" aria-hidden="true"
+            title="External Link to the Book" target = "_blank"></i></a></td>
+    <td></td>
+  </tr>
+  
+
+   
+  
+ <tr>
+    <td><input type="checkbox" /></td>
+    <td> Homework 7: Bayesian Inference &nbsp; &nbsp; </td>
+    <td>In Week 7 repo</td>
+    <td><a href="https://github.com/stats6-fa25" target ="_blank"> <i class="fa-brands fa-github" aria-hidden="true" 
+            title="External Link to GitHub" target = "_blank"></i></a></td>
+    <td>Nov 17th at 9:25 am</td>
+  </tr>
+  
+
+    
+        
+</table>
