--- a/specific-content/schedule/04-week08.qmd
+++ b/specific-content/schedule/04-week08.qmd
@@ -42,7 +42,8 @@
     <td><input type="checkbox" /></td>
     <td> Introduction to Machine Learning &nbsp; &nbsp; </td>
     <td> </td>
-    <td><a href="https://stats6-fa25.github.io/slides/week08/8b-machine-learning-handout.pdf" target ="_blank"> <i class="fas fa-file" aria-hidden="true"
+    <td><a href="https://stats6-fa25.github.io/slides/week08/8b-machine-learning.html" target ="_blank"> <i class="fas fa-laptop" aria-hidden="true"
+            title="External Link to Slides" target = "_blank"></i></a> <a href="https://stats6-fa25.github.io/slides/week08/8b-machine-learning-handout.pdf" target ="_blank"> <i class="fas fa-file" aria-hidden="true"
             title="External Link to Slides" target = "_blank"></i></a> </td>
     <td></td>
   </tr>
